// vi5-cef-server to vi5.js

syntax = "proto3";
package serverjs;

import "common.proto";

message InitializeInfo { string renderer_version = 1; }

message CanvasInfo {
  int32 nonce = 1;
  int32 x = 2;
  int32 y = 3;
  int32 width = 4;
  int32 height = 5;
}

message MaybeIncompleteRenderResponse {
  oneof response {
    CanvasInfo canvas_info = 1;
    string error_message = 2;
  }
  bool incomplete = 3;
}

